tests/diagnostics/expressions/match/non_exhaustive/expect.txt
# exit: 1
input/main.coppice:5:12: error: non-exhaustive match, missing: string
      return match value {
             ^
